--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -48,7 +48,7 @@
  SUB_no_lgbt: "LGBT人群没有权利"
  SUB_no_lgbt_desc: "我们不会允许LGBT人群在我们的共和国蔓延。"
  SUB_zavods: "我们需要更多工厂"
- SUB_zavods_desc: "我们的共和国需要更多的民用工业来真正帮助我们的共和国成为一个新的经济强国。"
+ SUB_zavods_desc: "我们的共和国需要更多的生产设施"
  SUB_cooperate_rjd: "与俄罗斯铁路的整合"
  SUB_cooperate_rjd_desc: "我们已准备好全面融入俄罗斯铁路网。"
  SUB_min_obr: "教育部"
@@ -117,8 +117,8 @@
  SUB_rosatom_desc: "俄罗斯国家核能公司是俄罗斯的国有核能公司，控制着俄罗斯的核工业复合体。"
  SUB_zdravo: "2011年健保改革"
  SUB_zdravo_desc: "2011年健保改革由总理弗拉基米尔·普京提出，其目的为拨款超过三千亿卢布用于改善俄罗斯的健保系统。"
- SUB_union_state: "与白俄罗斯协调联盟计划"
- SUB_union_state_desc: "我们还将参与俄罗斯和白俄罗斯联盟国家的项目协调。"
+ SUB_union_state: "与联盟国协调"
+ SUB_union_state_desc: "我们还将参与联盟国项目的协调"
  SUB_uchneia_s_br: "与白俄罗斯举行演习"
  SUB_uchneia_s_br_desc: "我们将举行我军和白俄罗斯共和国军队的联合作战协同演习。"
  SUB_aggressive: "侵略性外交政策"
@@ -2158,3 +2158,41 @@
  CHE_Strengthen_com_partys_agendaz_arm: "对亚美尼亚政治路线的批评"
  CHE_Financing_of_protest_movementsz_arm: "接管抗议活动"
  CHE_Establish_connectionsz_arm: "恢复亚美尼亚旧有关系"
+ SUB_police_out: "与特殊主体的互动"
+ SUB_police_out_desc: "俄罗斯的外交政策也包括扩张性的部分，我们愿意与这一扩张的主体和客体进行合作。"
+ SUB_novorossiya: "俄罗斯 - 新俄罗斯"
+ SUB_novorossiya_desc: "新俄罗斯正在回家，我们准备与俄罗斯的新主体互动。"
+ SUB_warsaw: "俄罗斯 - 华沙条约组织 "
+ SUB_warsaw_desc: "我们已准备好与华沙条约组织成员国开展合作"
+ SUB_trade_novorossiya_tt: "我们将§Y获得§!与§Y[NOV.GetNamewithFlag]§!达成§Y贸易协议§!的机会。"
+ SUB_trade_warsaw_tt: "我们将§Y获得§!与§Y华沙条约组织成员国§!达成§Y贸易协议§!的机会。"
+ BSH_world_dpr: "伙伴关系：[DPR.GetNameWithFlag]"
+ BSH_world_hpr: "伙伴关系：[HPR.GetNameWithFlag]"
+ BSH_world_lpr: "伙伴关系：[LPR.GetNameWithFlag]"
+ BSH_world_opr: "伙伴关系：[OPR.GetNameWithFlag]"
+ BSH_world_pol: "伙伴关系：[POL.GetNameWithFlag]"
+ BSH_world_rom: "伙伴关系：[ROM.GetNameWithFlag]"
+ BSH_world_bul: "伙伴关系：[BUL.GetNameWithFlag]"
+ BSH_world_cze: "伙伴关系：[CZE.GetNameWithFlag]"
+ BSH_world_hun: "伙伴关系：[HUN.GetNameWithFlag]"
+ TAT_world_dpr: "伙伴关系：[DPR.GetNameWithFlag]"
+ TAT_world_hpr: "伙伴关系：[HPR.GetNameWithFlag]"
+ TAT_world_lpr: "伙伴关系：[LPR.GetNameWithFlag]"
+ TAT_world_opr: "伙伴关系：[OPR.GetNameWithFlag]"
+ TAT_world_pol: "伙伴关系：[POL.GetNameWithFlag]"
+ TAT_world_rom: "伙伴关系：[ROM.GetNameWithFlag]"
+ TAT_world_bul: "伙伴关系：[BUL.GetNameWithFlag]"
+ TAT_world_cze: "伙伴关系：[CZE.GetNameWithFlag]"
+ TAT_world_hun: "伙伴关系：[HUN.GetNameWithFlag]"
+ KHM_world_dpr: "伙伴关系：[DPR.GetNameWithFlag]"
+ KHM_world_hpr: "伙伴关系：[HPR.GetNameWithFlag]"
+ KHM_world_lpr: "伙伴关系：[LPR.GetNameWithFlag]"
+ KHM_world_opr: "伙伴关系：[OPR.GetNameWithFlag]"
+ KHM_world_pol: "伙伴关系：[POL.GetNameWithFlag]"
+ KHM_world_rom: "伙伴关系：[ROM.GetNameWithFlag]"
+ KHM_world_bul: "伙伴关系：[BUL.GetNameWithFlag]"
+ KHM_world_hun: "伙伴关系：[HUN.GetNameWithFlag]"
+ PMR_world_dpr: "伙伴关系：[DPR.GetNameWithFlag]"
+ PMR_world_hpr: "伙伴关系：[HPR.GetNameWithFlag]"
+ PMR_world_lpr: "伙伴关系：[LPR.GetNameWithFlag]"
+ PMR_world_opr: "伙伴关系：[OPR.GetNameWithFlag]"
