--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -4022,7 +4022,7 @@
  USB.Neutral_conservatism: "£generic_Neutral_conservatism_small Freedom & Solidarity Party"
  USB.Neutral_conservatism_icon: "£generic_Neutral_conservatism_small"
  USB.Neutral_conservatism_desc: "£generic_Neutral_conservatism_small Freedom & Solidarity Party - (FSP/F&SP) Is a pro-isolationist party that seeks to use the means of science and innovation to secure the proper standards of living and enjoyment of life. Their main economic point is Autarky where possible, but not possibly Autarky. Social policy wise they are fairly moderate with a sort of left and right leaning give or take the subject material. An example is gays in the military, they believe and uphold such a thing as paramount for any citizen regardless of background, but yet they don't believe entirely in gay marriage. Regardless they've stuck through and through with their closest political ally, that being the Mid-Atlantic Party's Isolationist faction. Their common belief that the former US globally focused idealism is what resulted in the collapse leads for a sort of closed minded approach to foreign issues and essentially anything outside of say their neighborhood sort to speak."
- 
+
 
  ##Nationalist_Autocracy
  USB.Nat_Autocracy: "£USA_national_service_party National Service Party"
@@ -7028,7 +7028,7 @@
  MOR.Nat_Populism_desc: "(Right-Wing Nationalism) - Democratic Party of Independence (French: Parti Démocratique et de l'Indépendance, Arabic: Hizb Al-Shuwraa w Al-Aistiqlal, PD)\n\nDemocratic Party of Independence was founded in 1946 by Mohamed Hassan Ouazzani during the era of the protectorate. The party is a right-wing nationalist party that ardently supported the independence of Morocco from the French and Spanish."
  MOR.Nat_Fascism: "£IRQ_Nat_Autocracy_small (ALF) - Arab Liberation Front"
  MOR.Nat_Fascism_icon: "£IRQ_Nat_Autocracy_small"
- MOR.Nat_Fascism_desc: "(Moroccan Ba'athist) - Arab Liberation Front (Arabic: Jabhat at-Tahrir al-Arabiyya, Standard Moroccan Tamazight: Tirra n Thrir n l-Srabe, French: Front de libération arabe, ALF)\n\nArab Liberation Front is a small minor party in Morocco that follows the teachings of the Iraqi Ba'athist Party. It has remained relatively unknown in the grand scheme of Moroccan politics and it remains so to this day."
+ MOR.Nat_Fascism_desc: "(Iraqi Ba'athism) - Arab Liberation Front (Arabic: Jabhat at-Tahrir al-Arabiyya, Standard Moroccan Tamazight: Tirra n Thrir n l-Srabe, French: Front de libération arabe, ALF)\n\nArab Liberation Front is a small minor party in Morocco that follows the teachings of the Iraqi Ba'athist Party. It has remained relatively unknown in the grand scheme of Moroccan politics and it remains so to this day."
  MOR.Nat_Fascism_CUN: "£MOR_DC (CUN) - National Unity Collective"
  MOR.Nat_Fascism_CUN_icon: "£MOR_DC"
  MOR.Nat_Fascism_CUN_desc: "(Fascists) - National Unity Collective (Arabic: Jamaeat al-Wahdat al-Watania, French: Collectif d'unité nationale, CUN)\n\nThe National Unity Collective is a far-right party formed in Morocco in the mid-late 2010s. The vast majority of the membership comes from online forums under many names. Many of the members espouse views in line with anti-blackness and the endorsement of a pure white Moorish race and nation."
