doctrine gfx fix

--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -2440,6 +2440,10 @@
  Cat_blue_water_navy_desc: "A blue-water navy is a naval force capable of operating globally across the deep waters of open oceans. The definition varies based on the forces, but the requirement is the ability to exercise sea control at long range. It allows a nation's navy to project power far from the home country and usual includes one or more aircraft carriers."
  CAT_green_water_navy: "Green Water Navy"
  Cat_green_water_navy_desc: "A green-water navy is a maritime force capable of operating in its nation's coastal zones and has limited ability to operate in the surrounding marginal seas."
+ blue_water_navy: "Blue Water Navy"
+ blue_water_navy_desc: "A blue-water navy is a naval force capable of operating globally across the deep waters of open oceans. The definition varies based on the forces, but the requirement is the ability to exercise sea control at long range. It allows a nation's navy to project power far from the home country and usual includes one or more aircraft carriers."
+ green_water_navy: "Green Water Navy"
+ green_water_navy_desc: "A green-water navy is a maritime force capable of operating in its nation's coastal zones and has limited ability to operate in the surrounding marginal seas."
  floating_fortresses: "Floating Fortresses"
  floating_fortresses_desc: "Carriers are the new fortresses of the seas. Heavily armed and armored with aircraft a-plenty, they help the country's naval forces project power and sea control."
  distance_decimation: "Distance Decimation"
@@ -2520,6 +2524,8 @@
  topple_the_goliaths_desc: "We are David and we will defeat Goliath."
  CAT_jeune_ecole_two: "Jeune École"
  cat_jeune_ecole_two_desc: "Jeune École, or \"Young School,\" is a naval doctrine focusing on small, heavily armed, maneuverable warships to combat heavier, less agile ones. The design should allow us to fight with smaller vessels battling larger, more numerical, and superior enemy navies."
+ jeune_ecole_two: "Jeune École"
+ jeune_ecole_two_desc: "Jeune École, or \"Young School,\" is a naval doctrine focusing on small, heavily armed, maneuverable warships to combat heavier, less agile ones. The design should allow us to fight with smaller vessels battling larger, more numerical, and superior enemy navies."
  a_divergence_in_doctrine: "A Divergence in Doctrine"
  a_divergence_in_doctrine_desc: "Most navies fall under the principle of Green Water or Blue Water Naval Doctrine where they can force project farther then their coasts. Shifting to this lighter more agile design will allow us to diverge and potentially combat this harsher combat style."
  size_doesnt_matter: "Size Doesn't Matter"
