--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -681,6 +681,10 @@
  # SPECIFIC
  RULE_ALLOW_RELEASE_NATIONS_PEACE_ONLY_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! can release these country when met some condition."
  RULE_ALLOW_RELEASE_NATIONS_RUSSIA_CHE_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_chechnya$§! or §Y$SOV_question_of_chechnya$§! focus."
+ RULE_ALLOW_RELEASE_NATIONS_RUSSIA_BSH_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_bashkiria$§! focus."
+ RULE_ALLOW_RELEASE_NATIONS_RUSSIA_TAT_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_tatarstan$§! focus."
+ RULE_ALLOW_RELEASE_NATIONS_RUSSIA_KHM_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_khmao$§! focus."
+ RULE_ALLOW_RELEASE_NATIONS_RUSSIA_CRM_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$SOV_referendum_in_crimea$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_CHINA_TIB_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$CHI_Tibet_SAR$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_CHINA_ETK_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$CHI_Xinjiang_SAR$§! focus."
  RULE_ALLOW_RELEASE_NATIONS_CHINA_MON_TOOLTIP: "§Y[ROOT.GetNameDefCap]§! may not release this country unless first completing the §Y$CHI_Outer_Mongolia_SAR$§! focus."
