--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -248,3 +248,5 @@
  LOADING_TIP_261: "Nobody will ever return to 2007\n - Dmitry Medvedev"
  LOADING_TIP_262: "If a fight is inevitable, go and fight first.\n - Vladimir Putin"
  LOADING_TIP_263: "Comrades! We must abolish the cult of the individual decisively, once and for all.\n - Nikita Khrushchyov"
+ LOADING_TIP_264: "If we run the government with insects like this, will the government be done properly?\n - Kim Jae-gyu, the assassination of South Korean President Park Chung-hee. -"
+ LOADING_TIP_265: "There is no time to hesitate, we must strike hard!\n - Chun Doo-hwan, instructions on the suppression of the Gwangju democracy incident. -"
