--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -25,7 +25,7 @@
  CUB_invite_puerto_tt: "We will be able to invite [PTR.GetNamewithFlag] into our confederation"
  CUB_invite_haiti_tt: "We will be able to invite [HAI.GetNamewithFlag] into our confederation"
  CUB_invite_dominicana_tt: "We will be able to invite [DOM.GetNamewithFlag] into our confederation"
- leha_where_are_you: "We will launch an operation to capture Alexei Navalny. The more corrupt Russia is, the better chance we have of taking it over "
+ leha_where_are_you: "§YWe will launch an operation to capture §RAlexei Navalny§!. The more corrupt Russia is, the better chance we have of taking it over§!"
  Confederaion_HAI_no_tt: "§Y[HAI.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
  Confederaion_HAI_yes_tt: "§Y[HAI.GetNamewithFlag]§! is a member of the Antillean Confederation: §GYES§!"
  Confederaion_DOM_loc_no_tt: "§Y[DOM.GetNamewithFlag]§! is a member of the Antillean Confederation: §RNO§!"
@@ -748,6 +748,8 @@
  CUB_economic_low_desc: "The old economic system is no longer suitable for our country."
  CUB_cubafuture: "Cuban Future"
  CUB_cubafuture_desc: "After many years, the Cuban people must decide where to go. Stay in communism, embark on the path of democracy, or try to gain dominance in the Caribbean?"
+CUB_join_csto: "Join CSTO"
+CUB_join_csto_desc: "Some Russian sources have begun to spread information about our joining the CSTO. Well, once they have started to speculate about it, there is no point in keeping it secret. Cuba is part of the CSTO."
  #TESAK BRANCH
  CUB_tesak_in_power: "Buenos Dias Extremistas"
  CUB_tesak_in_power_desc: "It's about time, start cleaning up and eradicating all the corruption in the world."
