--- a/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CUB_l_simp_chinese.yml
@@ -1084,4 +1084,6 @@
  cub_military_coop_with_unionstate_tt: "联盟国家的原始形式是俄罗斯和白俄罗斯的联盟，俄罗斯一直支持我们，是我们的盟友。我们必须加强与联盟国家的合作。"
  cub_military_coop_with_sov_name_tt: "与俄罗斯的军事合作"
  cub_military_coop_with_unionstate_name_tt: "与联盟国的军事合作"
- leha_where_are_you: "我们将发起抓捕阿列克谢·纳瓦利内的行动。俄罗斯越腐败，我们就越有机会实现它."
+ leha_where_are_you: "§Y我们将发起抓捕§R阿列克谢·纳瓦利内§!的行动。俄罗斯越腐败，我们就越有机会实现它.§!"
+ CUB_join_csto: "加入集安组织"
+ CUB_join_csto_desc: "一些俄罗斯消息来源已经开始传播我们加入集体安全条约组织的消息。好吧，一旦他们开始猜测，就没有必要再保密了。古巴是集体安全条约组织的一部分。"
