--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -1084,4 +1084,6 @@
  cuba_news.62.t: "Cuba amnesties several thousand prisoners"
  cuba_news.62.d: "The Cuban Government announced the release of 2,900 prisoners, many of whom had been convicted of \"Offences against State security\". Such steps from the Cuban government have almost never been taken."
  cuba_news.62.a: "Interesting"
- leha_where_are_you: "We will launch an operation to capture Alexei Navalny. The more corrupt Russia is, the better chance we have of taking it over "
+ leha_where_are_you: "§YWe will launch an operation to capture §RAlexei Navalny§!. The more corrupt Russia is, the better chance we have of taking it over§!"
+ CUB_join_csto: "Join CSTO"
+ CUB_join_csto_desc: "Some Russian sources have begun to spread information about our joining the CSTO. Well, once they have started to speculate about it, there is no point in keeping it secret. Cuba is part of the CSTO."
