--- a/localisation/simp_chinese/MD_africa_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_africa_events_l_simp_chinese.yml
@@ -286,7 +286,7 @@
  central_africa.26.t: "战争的下一阶段"
  central_africa.26.d: "[CAR.GetLeader]以及来自各个反叛组织的侵犯行为指控已开始将紧张局势升级到全面战斗的地步。前塞雷卡士兵已脱离军队，现在公开与反巴拉卡组织作战。反巴拉卡组织指责前塞雷卡组织对战斗负责，[LOG.GetLeader]已宣布在该国东北部建立自己的个人酋长国。由于战争的祸害继续困扰着我们的国家，这个国家再次陷入混乱。"
  central_africa.26.a: "对抗叛军！"
- central_africa.26.b: "支持反巴卡拉"
+ central_africa.26.b: "支持反巴拉卡"
  central_africa.26.c: "支持洛贡共和国"
  central_africa.26.d1: "支持前塞雷卡"
  african.1.t: "2005年西非干旱"
