--- a/localisation/simp_chinese/MD_focus_FRA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_FRA_l_simp_chinese.yml
@@ -551,7 +551,7 @@
  france_md.106.b: "支持争取团结民主力量联盟"
  france_md.106.c: "支持塞雷卡"
  france_md.106.d1: "支持洛贡"
- france_md.106.e: "支持反巴卡拉"
+ france_md.106.e: "支持反巴拉卡"
  france_md.107.t: "薮猫行动"
  france_md.107.d: "作为对马里图阿雷格人叛乱的回应，国民议会已提议实施“薮猫行动”。目前，薮猫行动的目标是部署法国军队来支持[MAL.GetName]和[MAL.GetLeader]政府。如果我们愿意，我们可以改变外交政策并支持图阿雷格人的事业。我们应该代表冲突的哪一方进行干预？"
  france_md.107.a: "支持马里政府"
