--- a/localisation/simp_chinese/MD_frontend_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_frontend_l_simp_chinese.yml
@@ -108,3 +108,65 @@
  custom_diff_weak_kos: "@KOS 削弱科索沃"
  custom_diff_weak_che: "@CHE 削弱车臣"
  custom_diff_weak_bsh: "@BSH 削弱巴什科尔托斯坦"
+ custom_diff_strong_irq: "@IRQ 加强伊拉克"
+ custom_diff_strong_egy: "@EGY 加强埃及"
+ custom_diff_strong_moz: "@MOZ  加强莫桑比克"
+ custom_diff_strong_drc: "@DRC 加强刚果民主共和国"
+ custom_diff_strong_oma: "@OMA 加强阿曼"
+ custom_diff_strong_mor: "@MOR 加强摩洛哥"
+ custom_diff_strong_alg: "@ALG 加强阿尔及利亚"
+ custom_diff_strong_mal: "@MAL  加强马里"
+ custom_diff_strong_cub: "@CUB 加强古巴"
+ custom_diff_strong_hai: "@HAI 加强海地"
+ custom_diff_strong_dom: "@DOM 加强多米尼加共和国"
+ custom_diff_strong_log: "@LOG 加强洛雷斯坦"
+ custom_diff_strong_bal: "@BAL 加强反巴拉卡"
+ custom_diff_strong_sel: "@SEL 加强塞雷卡"
+ custom_diff_strong_jub: "@JUB 加强朱巴兰"
+ custom_diff_strong_sna: "@SNA 加强索马里全国联盟"
+ custom_diff_strong_som: "@SOM 加强索马里"
+ custom_diff_strong_shb: "@SHB 加强索马里青年党"
+ custom_diff_strong_pak: "@PAK 加强巴基斯坦"
+ custom_diff_strong_nor: "@NOR 加强挪威"
+ custom_diff_strong_hol: "@HOL 加强荷兰"
+ custom_diff_strong_rom: "@ROM 加强罗马尼亚"
+ custom_diff_strong_blr: "@BLR 加强白俄罗斯"
+ custom_diff_strong_est: "@EST 加强爱沙尼亚"
+ custom_diff_strong_lat: "@LAT 加强拉脱维亚"
+ custom_diff_strong_lit: "@LIT 加强立陶宛"
+ custom_diff_strong_ice: "@ICE 加强冰岛"
+ custom_diff_strong_hez: "@HEZ 加强真主党 "
+ custom_diff_strong_dpr: "@DPR 加强顿涅茨克人民共和国"
+ custom_diff_strong_lpr: "@LPR 加强卢甘斯克人民共和国"
+ custom_diff_strong_leb: "@LEB 加强黎巴嫩"
+ custom_diff_weak_irq: "@IRQ 削弱伊拉克"
+ custom_diff_weak_egy: "@EGY 削弱埃及"
+ custom_diff_weak_moz: "@MOZ 削弱莫桑比克"
+ custom_diff_weak_drc: "@DRC 削弱刚果民主共和国"
+ custom_diff_weak_oma: "@OMA 削弱阿曼"
+ custom_diff_weak_mor: "@MOR 削弱摩洛哥"
+ custom_diff_weak_alg: "@ALG 削弱阿尔及利亚"
+ custom_diff_weak_mal: "@MAL 削弱马里"
+ custom_diff_weak_cub: "@CUB 削弱古巴"
+ custom_diff_weak_hai: "@HAI 削弱海地"
+ custom_diff_weak_dom: "@DOM 削弱多米尼加共和国"
+ custom_diff_weak_log: "@LOG 削弱洛雷斯坦"
+ custom_diff_weak_bal: "@BAL 削弱反巴拉卡"
+ custom_diff_weak_sel: "@SEL 削弱塞雷卡"
+ custom_diff_weak_jub: "@JUB 削弱朱巴兰"
+ custom_diff_weak_sna: "@SNA 削弱索马里全国联盟"
+ custom_diff_weak_som: "@SOM 削弱索马里"
+ custom_diff_weak_shb: "@SHB 削弱索马里青年党"
+ custom_diff_weak_pak: "@PAK 削弱巴基斯坦"
+ custom_diff_weak_nor: "@NOR 削弱挪威"
+ custom_diff_weak_hol: "@HOL 削弱荷兰"
+ custom_diff_weak_rom: "@ROM 削弱罗马尼亚"
+ custom_diff_weak_blr: "@BLR 削弱白俄罗斯"
+ custom_diff_weak_est: "@EST 削弱爱沙尼亚"
+ custom_diff_weak_lat: "@LAT 削弱拉脱维亚"
+ custom_diff_weak_lit: "@LIT 削弱立陶宛"
+ custom_diff_weak_ice: "@ICE 削弱冰岛"
+ custom_diff_weak_hez: "@HEZ 削弱真主党"
+ custom_diff_weak_dpr: "@DPR 削弱顿涅茨克人民共和国"
+ custom_diff_weak_lpr: "@LPR 削弱卢甘斯克人民共和国"
+ custom_diff_weak_leb: "@LEB 削弱黎巴嫩"
