--- a/localisation/simp_chinese/countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/countries_l_simp_chinese.yml
@@ -254,21 +254,21 @@
  LOG_fascism_ADJ: "达尔库提"
  LOG_communism_ADJ: "达尔库提"
  LOG_nationalist_ADJ: "达尔库提"
- BAL_neutrality: "中非共和国基督教武装"
- BAL_neutrality_DEF: "中非共和国基督教武装"
- BAL_democratic: "中非共和国基督教武装"
- BAL_democratic_DEF: "中非共和国基督教武装"
- BAL_fascism: "中非共和国基督教武装"
- BAL_fascism_DEF: "中非共和国基督教武装"
- BAL_communism: "中非共和国基督教武装"
- BAL_communism_DEF: "中非共和国基督教武装"
- BAL_neutrality_ADJ: "中非共和国基督教武装"
- BAL_democratic_ADJ: "中非共和国基督教武装"
- BAL_fascism_ADJ: "中非共和国基督教武装"
- BAL_communism_ADJ: "中非共和国基督教武装"
- BAL_nationalist: "中非共和国基督教武装"
- BAL_nationalist_DEF: "中非共和国基督教武装"
- BAL_nationalist_ADJ: "中非共和国基督教武装"
+ BAL_neutrality: "反巴拉卡"
+ BAL_neutrality_DEF: "反巴拉卡"
+ BAL_democratic: "反巴拉卡"
+ BAL_democratic_DEF: "反巴拉卡"
+ BAL_fascism: "反巴拉卡"
+ BAL_fascism_DEF: "反巴拉卡"
+ BAL_communism: "反巴拉卡"
+ BAL_communism_DEF: "反巴拉卡"
+ BAL_neutrality_ADJ: "反巴拉卡"
+ BAL_democratic_ADJ: "反巴拉卡"
+ BAL_fascism_ADJ: "反巴拉卡"
+ BAL_communism_ADJ: "反巴拉卡"
+ BAL_nationalist: "反巴拉卡"
+ BAL_nationalist_DEF: "反巴拉卡"
+ BAL_nationalist_ADJ: "反巴拉卡"
  HOU_neutrality: "胡赛也门"
  HOU_neutrality_DEF: "胡赛也门"
  HOU_democratic: "胡赛也门"
