Bavaria + German fixes

--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2224,6 +2224,7 @@
  bavaria.1.t: "[BAY.GetFlag] Bavarian's call for independence"
  bavaria.1.d: "[BAY.GetFlag] Bavarian's all across Bavaria have begun demanding independence. Our economic mismanagement, and wreckless policies have pushed the people to the edge, so much so that they are demanding outright independence."
  bavaria.1.a: "Farewell, Bavaria"
+ bavaria.1.b: "Absolutely Not!"
  bavaria.2.t: "Bavaria's Future"
  bavaria.2.d: "Today, we sit and decide who we want to have be Bavaria's leading party. Of course we could've just held a referendum and let the people of Bavaria decide, but who cares what they think, what matters is what we think at the end of the day."
  bavaria.2.a: "CSU"
