Mo' German fixes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -113,6 +113,7 @@ v1.10.0
   - Fixed the Deals with China/Deals with Russia focus in VEN having the opinion being inversed
   - Fixed a missing icon in the Syrian national spirits
   - Cleaned up a tooltip for a San Marino investments to make it clearer
+  - Germany will not receive events with debuffs pretaining to the East-West divide if Die Linke is in power
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba, Free States of America, Iraq
@@ -166,14 +167,15 @@ v1.10.0
   - Added modifiers for income and cost from selling and buying on international market
   - Added SigSauer to Switzerland
   - Added three new continuous focuses: Temporary Intelligence Agents, Nuclear Energy Investments, Encourage Foreign Investments
+  - Bavarian Nationalism will now naturally tick down if you have Fast Growth or Economic Boom
 
  Game Rules:
   - Added a new "Enable Monthly Domestic Independence Tick" game rule
   - Added a new "Monthly Domestic Independence Tick Amount" game rule
+  - Added an Iranian Zoroastrian resurgence game rule
 
  Graphics:
   - Added the "Toofan MRAP" for Iran (2005 Inf EQP)
-  - Replaced the unit model for Russia
   - SOV Political Rework (Reworked parties and leaders for SOV. New parties for Russia's breakaway tags and dynamic parties for potential Federal Subjects of Russia)
   - Changed the order of the Chinese aircraft models to match the reality
   - GFX Rework for USA, Russia, Italy
@@ -191,6 +193,7 @@ v1.10.0
   - Added party icons to much of the Western African tags
   - Additional french models
   - Reworked Law & Spending GFX
+  - Animated several old models
 
  Localization:
   - Added missing loc for tech categories research speed bonus
