--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1487,7 +1487,7 @@
  iraq_yearly.3.a: "Respond Now!"
  iraq_yearly.3.b: "I Don't Care"
  # Ideas
- IRQ_conventional_focus: "Conventioan Focus"
+ IRQ_conventional_focus: "Conventional Focus"
  IRQ_baath_equilibrium: "Shockwaves of Ba'athism"
  IRQ_baath_equilibrium_desc: "Ba'athist sentiments still run high amongst some of our people, and we need to ensure this is handled with properly."
  IRQ_arable_land_project: "Arable Land Transformation"
