--- a/localisation/french/MD_focus_IRQ_l_french.yml
+++ b/localisation/french/MD_focus_IRQ_l_french.yml
@@ -1906,3 +1906,4 @@
  IRQ_targeted_preparations: "Targeted Preparations"
  IRQ_sinjar_TT: "Sinjar"
  IRQ_sinjar_insurgents: "STATE SELECTED: sinjar\nInsurgents in sinjar: [?641.IRQ_jihadist_troops]\nNext Attack in: [?IRQ_count_down_var] Day(s)!"
+ IRQ_conventional_focus: "Conventional Focus"
