--- a/localisation/french/MD_focus_SWI_l_french.yml
+++ b/localisation/french/MD_focus_SWI_l_french.yml
@@ -1,39 +1,39 @@
 ﻿l_french:
- switzerland_focus: "Swiss Focus Tree"
- swiss_alliance: "Swiss Protection League"
- SWI_strengthen_the_government: "Strengthen the Government"
- SWI_strengthen_the_government_desc: "As we seek to strengthen our government, we must look to look at making government and administration reforms as our first port of call."
- SWI_join_the_united_nations: "Join the United Nations"
- SWI_join_the_united_nations_desc: "Switzerland has so far decided to not become a full-on member of the UN, choosing instead to remain an observer state. The population wishes for that to change now. Switzerland should hold a referendum and then confirm its ascension to full UN membership."
- SWI_economic_independence: "Economic Independence"
- SWI_economic_independence_desc: "We must ensure that we are reliant on ourselves and only ourselves for our economic security."
- SWI_seek_eu_membership: "Closer Ties with EU"
- SWI_seek_eu_membership_desc: "We must integrate more with our fellow Europeans. We will get an investment from the EU."
- SWI_strengthen_the_fdfa: "Strengthen the FDFA"
- SWI_strengthen_the_fdfa_desc: "To ensure we have all of our options open when dealing with different states, we should strengthen our foreign affairs department."
- SWI_strengthen_the_fdha: "Stengthen the FDHA"
- SWI_strengthen_the_fdha_desc: "To better maintain stability and security at home, we must ensure our domestic affairs department can operate to its full extent."
- SWI_join_schengen: "Join Schengen"
- SWI_join_schengen_desc: "Joining the Schengen Area will be a great way to integrate us into the European community."
- SWI_maintain_border_controls: "Maintain Border Controls"
- SWI_maintain_border_controls_desc: "We must maintain the sovereignty of our nation. It's insanity even considering letting go of our borders!"
- SWI_international_neutrality: "International Neutrality"
- SWI_international_neutrality_desc: "Our neutrality is a tradition that goes back to 1815, and it is something our people cherish dearly. We will continue this beautiful way of life!"
- SWI_declare_the_end_of_swiss_neutrality: "Declare the End of Swiss Neutrality"
- SWI_declare_the_end_of_swiss_neutrality_desc: "While neutrality has made us peaceful, it has also made us weak and reliant. We need to move towards strengthening ourselves more."
- SWI_reform_the_bureaucracy: "Reform the Bureaucracy"
- SWI_reform_the_bureaucracy_desc: "We will need to break down any barriers stopping us from building up an international presence."
- SWI_additional_military_facilities: "Additional Military Facilities"
- SWI_additional_military_facilities_desc: "It never hurts to find more ways to protect yourself. With the uncertain times ahead, perhaps increasing our military sector will do a bit of good."
- SWI_the_swiss_protection_league: "The Swiss Protection League"
- SWI_the_swiss_protection_league_desc: "It is too dangerous to go this alone, but we will be swallowed up if we join a bigger alliance. Perhaps the answer is founding our own alliance."
- SWI_condemn_factionalism: "Condemn Factionalism"
- SWI_condemn_factionalism_desc: "The only thing that breaking up into little factions can bring is total war. It happened time and time again throughout history. Switzerland will have none of it."
- SWI_economic_relations_in_the_alps: "Economic Relations in the Alps"
- SWI_economic_relations_in_the_alps_desc: "Our Alpine neighbors are great opportunities for investment."
- SWI_european_investment_opportunities: "European Investment Opportunities"
- SWI_european_investment_opportunities_desc: "Now that we have opened our borders to the European community, why not open our economy to them as well? We will begin pursuing investments in and around Europe!"
- SWI_invite_liechtenstein: "Invite Liechtenstein"
+ switzerland_focus: "Priorités nationales suisses"
+ swiss_alliance: "Ligue de protection suisse"
+ SWI_strengthen_the_government: "Renforcer le gouvernement"
+ SWI_strengthen_the_government_desc: "Pour commencer à apporter les réformes et les changements nécessaires à notre nation, nous devrons renforcer notre administration."
+ SWI_join_the_united_nations: "Rejoindre les Nations Unies"
+ SWI_join_the_united_nations_desc: "Jusqu'à présent, la Suisse a décidé de ne pas devenir membre à part entière de l'ONU, mais de rester un État observateur. La population souhaite que cela change maintenant. La Suisse devrait organiser un référendum et confirmer ensuite son accession au statut de membre à part entière de l'ONU."
+ SWI_economic_independence: "Indépendance économique"
+ SWI_economic_independence_desc: "Nous devons veiller à ce que notre sécurité économique dépende de nous-mêmes et uniquement de nous-mêmes."
+ SWI_seek_eu_membership: "Rapprochement avec l'UE"
+ SWI_seek_eu_membership_desc: "Nous devons nous intégrer davantage à nos concitoyens européens. Nous obtiendrons un investissement de l'UE."
+ SWI_strengthen_the_fdfa: "Renforcer le DFAE"
+ SWI_strengthen_the_fdfa_desc: "Pour nous assurer que nous avons toutes les options ouvertes lorsque nous traitons avec différents États, nous devons renforcer notre département des affaires étrangères."
+ SWI_strengthen_the_fdha: "Renforcer le DFI"
+ SWI_strengthen_the_fdha_desc: "Pour mieux maintenir la stabilité et la sécurité chez nous, nous devons veiller à ce que notre département des affaires intérieures puisse fonctionner à plein régime."
+ SWI_join_schengen: "Rejoindre Schengen"
+ SWI_join_schengen_desc: "L'adhésion à l'espace Schengen sera un excellent moyen de nous intégrer dans la communauté européenne."
+ SWI_maintain_border_controls: "Maintenir les contrôles aux frontières"
+ SWI_maintain_border_controls_desc: "Nous devons maintenir la souveraineté de notre nation. C'est de la folie d'envisager de laisser tomber nos frontières !"
+ SWI_international_neutrality: "Neutralité internationale"
+ SWI_international_neutrality_desc: "Notre neutralité est une tradition qui remonte à 1815, et c'est une chose à laquelle notre peuple tient beaucoup. Nous poursuivrons ce beau mode de vie !"
+ SWI_declare_the_end_of_swiss_neutrality: "Déclarer la fin de la neutralité suisse"
+ SWI_declare_the_end_of_swiss_neutrality_desc: "Si la neutralité nous a rendus pacifiques, elle nous a également rendus faibles et dépendants. Nous devons nous efforcer de nous renforcer davantage."
+ SWI_reform_the_bureaucracy: "Réformer la bureaucratie"
+ SWI_reform_the_bureaucracy_desc: "Nous devrons faire tomber toutes les barrières qui nous empêchent de développer une présence internationale."
+ SWI_additional_military_facilities: "Installations militaires supplémentaires"
+ SWI_additional_military_facilities_desc: "Cela ne fait jamais de mal de trouver d'autres moyens de se protéger. Avec les temps incertains qui s'annoncent, peut-être que l'augmentation de notre secteur militaire fera un peu de bien."
+ SWI_the_swiss_protection_league: "La Ligue de protection suisse"
+ SWI_the_swiss_protection_league_desc: "Il est trop dangereux de faire cavalier seul, mais nous serons engloutis si nous rejoignons une plus grande alliance. Peut-être que la réponse est de fonder notre propre alliance."
+ SWI_condemn_factionalism: "Condamner le factionnalisme"
+ SWI_condemn_factionalism_desc: "La seule chose que l'éclatement en petites factions peut apporter est la guerre totale. C'est arrivé maintes et maintes fois au cours de l'histoire. La Suisse ne veut pas de cela."
+ SWI_economic_relations_in_the_alps: "Relations économiques dans les Alpes"
+ SWI_economic_relations_in_the_alps_desc: "Nos voisins alpins sont de formidables opportunités d'investissement."
+ SWI_european_investment_opportunities: "Opportunités d'investissement en Europe"
+ SWI_european_investment_opportunities_desc: "Maintenant que nous avons ouvert nos frontières à la communauté européenne, pourquoi ne pas leur ouvrir également notre économie ? Nous allons commencer à persévérer dans les investissements dans et autour de l'Europe !"
+ SWI_invite_liechtenstein: "Inviter le Liechtenstein"
  SWI_invite_liechtenstein_desc: "Liechtenstein has been with us through thick and thin. They are a perfect nation to add to our alliance."
  SWI_invite_austria: "Invite Austria"
  SWI_invite_austria_desc: "We have a lot in common with Austria, so it would make sense to foster this bond of kinship. Let us extend an invitation into our alliance to them."
