--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -1977,7 +1977,7 @@
  BLR_belarus_kommi6_tt: "$BLR_belarus_kommi_modifier_tt_intro$\n£manpower_texticon 适役人口：§G+5.00%§!  \n\n"
  BLR_belarus_kommi7_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £stability_texticon 稳定度：§R-7.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§! \n £education_cost_multiplier_modifier_texticon §Y教育开支§!乘数：§R+5.00%§! \n\n"
  BLR_belarus_kommi8_tt: "$BLR_belarus_kommi_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!  \n\n"
- BLR_belarus_kommi9_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon  生产效率增长：§G+5.00%§! \n £construction_speed_texticon  生产效率增长：§G+5.00%§!\n\n"
+ BLR_belarus_kommi9_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon  生产效率增长：§G+5.00%§! \n £construction_speed_texticon  生产效率增长：§G+5.00%§!\n\n"
  BLR_belarus_kommi10_tt: "$BLR_belarus_kommi_modifier_tt_intro$ \n £efficiency_growth_texticon 生产效率增长：§G+10.00%§! \n £construction_speed_texticon 当地建造速度：§G+10.00%§!\n\n"
  BLR_belarus_kommi11_tt: "$BLR_belarus_kommi_modifier_tt_intro$\n£resources_texticon 资源获取效率：§G+5.00%§! \n\n"
  BLR_belarus_kommi12_tt: "$BLR_belarus_kommi_modifier_tt_intro$\n£consumer_goods_texticon 税收成本：§R-2.00%§! \n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§! \n\n"
