--- a/localisation/simp_chinese/MD_focus_BRA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BRA_l_simp_chinese.yml
@@ -1391,7 +1391,7 @@
  BRA_decision_support_reformists: "支持改革派"
  BRA_decision_support_reformists_desc: "我们需要信守承诺。"
  BRA_amazon_resource_development_decision_category: "亚马逊资源开发"
- BRA_amazon_resource_development_decision_category_desc: "亚马孙是未开发的宝藏，如果我们肯在它上面花费时间和金钱，它将会带来益处。"
+ BRA_amazon_resource_development_decision_category_desc: "亚马逊是未开发的宝藏，如果我们肯在它上面花费时间和金钱，它将会带来益处。"
  BRA_decision_intial_investment: "初始投入"
  BRA_decision_intial_investment_desc: "我们需要先建立一些产业框架，然后才能在亚马孙河地区扩大工业。"
  BRA_decision_the_road_to_el_dorado: "黄金国之路"
