--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -896,7 +896,7 @@
  ITA_michela_vittoria_brambilla_TT: "背景: 演员政治家: §Y政治点数§! §G5%§!\n作家r: §Y教育成本§! §G-5%§! §Y稳定度§! §G5%§!"
  ITA_roberto_calderoli: "罗伯托·卡尔代罗利"
  ITA_roberto_calderoli_desc: ""
- ITA_roberto_calderoli_TT: "背景: 医生: §Y健保成本§! §G-5%§! §Y每月人口增长§! §G10%§!"
+ ITA_roberto_calderoli_TT: "背景：医生：§Y医保成本§! §G-5%§! §Y每月人口增长§! §G10%§!"
  ITA_roberto_maroni: "罗伯托·马罗尼"
  ITA_roberto_maroni_desc: ""
  ITA_roberto_maroni_TT: "背景: 职业政治家: §Y政治点数r§! §G10%§!"
@@ -1862,7 +1862,7 @@
  modify_bureaucracy_cost_multiplier_modifier_effect_TT: "§Y官僚体系花费§!：[?ITA_bureaucracy_cost_multiplier_modifier_change|%-]\n"
  modify_police_cost_multiplier_modifier_effect_TT: "§Y安全开支花费§!：[?ITA_police_cost_multiplier_modifier_change|%-]\n"
  modify_education_cost_multiplier_modifier_effect_TT: "§Y教育花费§!：[?ITA_education_cost_multiplier_modifier_change|%-]\n"
- modify_health_cost_multiplier_modifier_effect_TT: "§Y健保开支§!：[?ITA_health_cost_multiplier_modifier_change|%-]\n"
+ modify_health_cost_multiplier_modifier_effect_TT: "§Y医保开支§!：[?ITA_health_cost_multiplier_modifier_change|%-]\n"
  modify_social_cost_multiplier_modifier_effect_TT: "§Y社会开支§!：[?ITA_social_cost_multiplier_modifier_change|%-]\n"
  modify_army_personnel_cost_multiplier_modifier_effect_TT: "§Y陆军开支§!：[?ITA_army_personnel_cost_multiplier_modifier_change|%-]\n"
  modify_navy_personnel_cost_multiplier_modifier_effect_TT: "§Y海军开支§!：[?ITA_navy_personnel_cost_multiplier_modifier_change|%-]\n"
