--- a/localisation/simp_chinese/MD_focus_SOO_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SOO_l_simp_chinese.yml
@@ -356,7 +356,7 @@
  SOO_commie1_tt: "$SOO_commie_modifier_tt_intro$ \n £drift_defence_texticon 意识形态变化防御：§R-15.00%§! \n £stability_texticon 稳定度：§G+9.00%§!\n\n"
  SOO_commie2_tt: "$SOO_commie_modifier_tt_intro$ \n £stability_texticon 稳定度：§G+6.00%§! \n £political_violence_gain_texticon  抵抗增长速度：§G-10.00%§!\n £police_cost_multiplier_modifier_texticon §Y警力成本§!乘数：§R+5.00%§!\n\n "
  SOO_commie3_tt: "$SOO_commie_modifier_tt_intro$ \n £stability_texticon 稳定度：§G+4.00%§! \n £bureaucracy_cost_multiplier_modifier_texticon §Y官僚体系花费§!乘数：§R+5.00%§!\n £emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.01%§!\n\n "
- SOO_commie4_tt: "$SOO_commie_modifier_tt_intro$ \n £construction_speed_milfactory_texticon §Y军用工厂§!建造速度：§G+9.00%§! \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§!\n\n "
+ SOO_commie4_tt: "$SOO_commie_modifier_tt_intro$ \n £construction_speed_milfactory_texticon §Y军用工厂§!建造速度：§G+9.00%§! \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+5.00%§!\n\n "
  SOO_commie5_tt: "$SOO_commie_modifier_tt_intro$ \n £emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.04%§! \n £nationalist_outlook_campaign_cost_modifier_texticon 每日民族主义新增支持率：§G+0.04%§! \n £stability_texticon 稳定度：§R-7.00%§!\n\n"
  SOO_commie6_tt: "$SOO_commie_modifier_tt_intro$ \n £emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§! \n £education_cost_multiplier_modifier_texticon §Y教育开支§!乘数：§R+10.00%§!\n\n"
  SOO_commie7_tt: "$SOO_commie_modifier_tt_intro$ \n £education_cost_multiplier_modifier_texticon §Y教育开支§!乘数：§R+9.00%§! \n 研究速度：§G+15.00%§! \n\n"
@@ -367,9 +367,9 @@
  SOO_natpop_start_tt: "添加§Y$SOO_natpop_modifier$§!，其效果为 £political_power_texticon 政治点数获取：§G+4.00%§!\n\n"
  SOO_natpop_modifier_tt_intro: "更改§Y$SOO_natpop_modifier$§!"
  SOO_natpop1_tt: "$SOO_natpop_modifier_tt_intro$ \n £bureaucracy_cost_multiplier_modifier_texticon §Y官僚体系花费§!乘数：§G-15.00%§! \n £stability_texticon 稳定度：§G+5.00%§!\n\n"
- SOO_natpop2_tt: "$SOO_natpop_modifier_tt_intro$ \n £construction_speed_milfactory_texticon §Y军用工厂§!建设速度：§G+15.00%§! \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+8.00%§! \n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+8.00%§!\n\n "
+ SOO_natpop2_tt: "$SOO_natpop_modifier_tt_intro$ \n £construction_speed_milfactory_texticon §Y军用工厂§!建设速度：§G+15.00%§! \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+8.00%§! \n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+8.00%§!\n\n "
  SOO_natpop3_tt: "$SOO_natpop_modifier_tt_intro$ \n £nationalist_outlook_campaign_cost_modifier_texticon 每日民族主义新增支持率：§G+0.03%§!\n\n"
- SOO_natpop4_tt: "$SOO_natpop_modifier_tt_intro$ \n £manpower_texticon 可征召人口：§G+8.00%§!\n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§! \n\n"
+ SOO_natpop4_tt: "$SOO_natpop_modifier_tt_intro$ \n £manpower_texticon 可征召人口：§G+8.00%§!\n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+5.00%§! \n\n"
  SOO_natpop5_tt: "$SOO_natpop_modifier_tt_intro$ \n £political_power_texticon 政治点数获取：§G+3.00%§! \n £drift_defence_texticon 意识形态变化防御：§R-12.00%§!\n\n"
  SOO_natpop6_tt: "$SOO_natpop_modifier_tt_intro$\n研究速度：§G+10.00%§!\n\n"
  SOO_nyhaz_modifier: "军国主义的大众政治"
@@ -381,7 +381,7 @@
  SOO_nyhaz3_tt: "$SOO_nyhaz_modifier_tt_intro$ \n £police_cost_multiplier_modifier_texticon §Y警力成本§!乘数：§R+5.00%§! \n £political_violence_texticon 来自外国的颠覆活动效率：§G-10.00%§! \n £operatives_root_out_resistance_texticon 根除抵抗组织任务成果：§G+15.00%§! \n\n"
  SOO_nyhaz4_tt: "$SOO_nyhaz_modifier_tt_intro$ \n £operatives_root_out_resistance_texticon 根除抵抗组织任务成果：§G+15.00%§!\n\n"
  SOO_nyhaz5_tt: "$SOO_nyhaz_modifier_tt_intro$ \n £political_power_texticon 政治点数获取：§G+3.00%§! \n £drift_defence_texticon 意识形态变化防御：§R-12.00%§!\n\n"
- SOO_nyhaz6_tt: "$SOO_nyhaz_modifier_tt_intro$ \n £manpower_texticon 可征召人口：§G+8.00%§!\n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§! \n\n"
+ SOO_nyhaz6_tt: "$SOO_nyhaz_modifier_tt_intro$ \n £manpower_texticon 可征召人口：§G+8.00%§!\n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+5.00%§! \n\n"
  SOO_bandit_modifier: "§R塔杰夫家族§!的能量"
  SOO_bandit_modifier_desc: "塔杰夫家族已经控制了我们共和国的许多领域，我们实际上正在损失数百万美元，因为没有人会对付他们。"
  SOO_bandit_modifier_tt_intro: "更改§Y$SOO_bandit_modifier$§!"
