--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -115,8 +115,8 @@
  SUB_putin_desc: "作为俄罗斯联邦的一员，我们将遵循总统选择的政治道路。"
  SUB_rosatom: "俄罗斯国家原子能公司"
  SUB_rosatom_desc: "俄罗斯国家核能公司是俄罗斯的国有核能公司，控制着俄罗斯的核工业复合体。"
- SUB_zdravo: "2011年健保改革"
- SUB_zdravo_desc: "2011年健保改革由总理弗拉基米尔·普京提出，其目的为拨款超过三千亿卢布用于改善俄罗斯的健保系统。"
+ SUB_zdravo: "2011年医保改革"
+ SUB_zdravo_desc: "2011年医保改革由总理弗拉基米尔·普京提出，其目的为拨款超过三千亿卢布用于改善俄罗斯的健保系统。"
  SUB_union_state: "与联盟国协调"
  SUB_union_state_desc: "我们还将参与联盟国项目的协调"
  SUB_uchneia_s_br: "与白俄罗斯举行演习"
@@ -351,7 +351,7 @@
  TAT_liberals_modifier3_tt: "$TAT_liberals_modifier_tt_intro$\n£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义新增支持率：§G+0.01§! \n£stability_texticon 稳定度：§G+1.00%§! \n£bureaucracy_cost_multiplier_modifier_texticon §Y官僚体系花费§!乘数：§R+10.00%§!\n\n"
  TAT_liberals_modifier4_tt: "$TAT_liberals_modifier_tt_intro$\n£resourTAT_texticon  资源获取效率：§G+10.00%§!\n£stability_texticon 稳定度：§G+1.00%§! \n£social_cost_multiplier_modifier_texticon §Y社会开支花费§!乘数：§R+20.00%§!\n\n"
  TAT_liberals_modifier5_tt: "$TAT_liberals_modifier_tt_intro$\n£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义新增支持率：§G+0.01§! \n£stability_texticon 稳定度：§R-5.00%§! \n£drift_defence_texticon 意识形态变化防御：§R-5.00%§!\n\n"
- TAT_liberals_modifier6_tt: "$TAT_liberals_modifier_tt_intro$\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+10.00%§!\n£health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+10.00%§!\n£population_texticon 每月人口增长：§G+7.00%§!\n\n"
+ TAT_liberals_modifier6_tt: "$TAT_liberals_modifier_tt_intro$\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+10.00%§!\n£health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+10.00%§!\n£population_texticon 每月人口增长：§G+7.00%§!\n\n"
  TAT_liberals_modifier7_tt: "$TAT_liberals_modifier_tt_intro$\n£stability_texticon 稳定度：§G+9.00%§!\n\n"
  TAT_liberals_modifier8_tt: "$TAT_liberals_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!\n£education_budget_cost_factor_texticon 教育开支变更花费：§R+10.00%§!\n\n"
  TAT_liberals_modifier9_tt: "$TAT_liberals_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!\n\n"
@@ -370,7 +370,7 @@
  TAT_tatar_kommi6_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£manpower_texticon 适役人口：§G+5.00%§!\n\n"
  TAT_tatar_kommi7_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£stability_texticon 稳定度：§R-7.00%§!\n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§!\n£education_cost_multiplier_modifier_texticon §Y教育开支§!乘数：§R+5.00%§!\n\n"
  TAT_tatar_kommi8_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!\n\n"
- TAT_tatar_kommi9_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon  生产效率增长：§G+5.00%§! \n £construction_speed_texticon  生产效率增长：§G+5.00%§!\n\n"
+ TAT_tatar_kommi9_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon  生产效率增长：§G+5.00%§! \n £construction_speed_texticon  生产效率增长：§G+5.00%§!\n\n"
  TAT_tatar_kommi10_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n £efficiency_growth_texticon 生产效率增长：§G+10.00%§! \n £construction_speed_texticon 当地建造速度：§G+10.00%§!\n\n"
  TAT_tatar_kommi11_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£resources_texticon 资源获取效率：§G+5.00%§!\n\n"
  TAT_tatar_kommi12_tt: "$TAT_tatar_kommi_modifier_tt_intro$\n£consumer_goods_texticon 税收成本：§R-2.00%§! \n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§!\n\n"
@@ -1842,7 +1842,7 @@
  BSH_tatar_kommi6_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£manpower_texticon 适役人口：§G+5.00%§!\n\n"
  BSH_tatar_kommi7_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£stability_texticon 稳定度：§R-7.00%§!\n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§!\n£education_cost_multiplier_modifier_texticon §Y教育开支§!乘数：§R+5.00%§!\n\n"
  BSH_tatar_kommi8_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!\n\n"
- BSH_tatar_kommi9_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon  生产效率增长：§G+5.00%§! \n £construction_speed_texticon  生产效率增长：§G+5.00%§!\n\n"
+ BSH_tatar_kommi9_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon  生产效率增长：§G+5.00%§! \n £construction_speed_texticon  生产效率增长：§G+5.00%§!\n\n"
  BSH_tatar_kommi10_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £efficiency_growth_texticon 生产效率增长：§G+10.00%§! \n £construction_speed_texticon 当地建造速度：§G+10.00%§!\n\n"
  BSH_tatar_kommi11_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n £resources_texticon 资源获取效率：§G+5.00%§! \n\n"
  BSH_tatar_kommi12_tt: "$BSH_tatar_kommi_modifier_tt_intro$\n£consumer_goods_texticon 税收成本：§R-2.00%§! \n£emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§!\n\n"
