--- a/localisation/simp_chinese/factions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/factions_l_simp_chinese.yml
@@ -48,7 +48,7 @@
  PENINSULA_SHIELD: "海湾合作委员会"
  idea_gcc_member_state: "海湾合作委员会成员国"
  idea_gcc_member_state_desc: "海湾合作委员会是波斯湾所有阿拉伯君主国的政治和经济联盟。"
- idea_gcc_member_state_TT: "§R阵营特殊规则§!：\n-一旦§Y强大的同盟§!完成，只有海湾合作委员会成员国才被允许加入该阵营"
+ idea_gcc_member_state_TT: "§R阵营特殊规则§!：\n-一旦国策§Y强大的同盟§!完成，只有海湾合作委员会成员国才被允许加入该阵营"
  gcc_member_state_join_faction_rule_tt: "§R只有海湾合作委员会成员才能加入海湾合作委员会阵营！§!"
  gcc_member_state_offer_join_faction_rule_tt: "§R只有海湾合作委员会成员才能加入海湾合作委员会阵营！§!"
  british_commonwealth: "英联邦"
