--- a/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/replaced_from_vanilla_modifiers_l_simp_chinese.yml
@@ -71,7 +71,7 @@
  bureaucracy_cost_multiplier_modifier: "£bureaucracy_cost_multiplier_modifier_texticon §Y官僚体系花费§!乘数"
  police_cost_multiplier_modifier: "£police_cost_multiplier_modifier_texticon §Y安全开支§!乘数"
  education_cost_multiplier_modifier: "£education_cost_multiplier_modifier_texticon §Y教育开支§!乘数"
- health_cost_multiplier_modifier: "£health_cost_multiplier_modifier_texticon §Y健保开支§!乘数"
+ health_cost_multiplier_modifier: "£health_cost_multiplier_modifier_texticon §Y医保开支§!乘数"
  social_cost_multiplier_modifier: "£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数"
  resource_export_multiplier_modifier: "£resource_export_multiplier_modifier_texticon §Y资源出口收入§!乘数"
  econ_cycle_upg_cost_multiplier_modifier: "£econ_cycle_upg_cost_multiplier_modifier_texticon §Y经济周期变更开支§!乘数"
@@ -1828,7 +1828,7 @@
  bureaucracy_cost_factor: "£bureaucracy_cost_factor_texticon 官僚体系开支变更花费"
  crime_fighting_cost_factor: "£crime_fighting_cost_factor_texticon 内部安全开支变更花费"
  education_budget_cost_factor: "£education_budget_cost_factor_texticon 教育开支变更花费"
- health_budget_cost_factor: "£health_budget_cost_factor_texticon 健保开支变更花费"
+ health_budget_cost_factor: "£health_budget_cost_factor_texticon 医保开支变更花费"
  social_budget_cost_factor: "£social_budget_cost_factor_texticon 社会开支变更花费"
  Military_Spending_cost_factor: "£Military_Spending_cost_factor_texticon 军队开支变更花费"
  Conscription_Law_cost_factor: "£Conscription_Law_cost_factor_texticon 征兵法案变更花费"
@@ -2047,7 +2047,7 @@
  buildings_worker_requirement_modifier: "所有建筑工人要求"
  MODIFIER_CONSUMER_GOODS_EXPECTED_VALUE: "£consumer_goods_texticon 税收成本预期值"
  expected_welfare_modifier: "§Y预期福利支出§!"
- expected_healthcare_modifier: "§Y预期健保支出§!"
+ expected_healthcare_modifier: "§Y预期医保支出§!"
  expected_education_modifier: "§Y预期教育支出§!"
  expected_police_modifier: "§Y预期警力支出§!"
  expected_adm_modifier: "§Y预期行政支出§!"
