--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -357,7 +357,7 @@
  CES_liberals_modifier3_tt: "$CES_liberals_modifier_tt_intro$\n£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义新增支持率：§G+0.01§! \n£stability_texticon 稳定度：§G+1.00%§! \n£bureaucracy_cost_multiplier_modifier_texticon §Y官僚体系花费§!乘数：§R+10.00%§!!\n\n"
  CES_liberals_modifier4_tt: "$CES_liberals_modifier_tt_intro$\n£resources_texticon 资源获取效率：§G+10.00%§!\n£stability_texticon 稳定度：§G+1.00%§! \n£social_cost_multiplier_modifier_texticon §Y社会开支花费§!乘数：§R+20.00%§!!\n\n"
  CES_liberals_modifier5_tt: "$CES_liberals_modifier_tt_intro$\n£western_outlook_campaign_cost_modifier_texticon 每日亲西方主义每日新增支持率：§G+0.01§! \n£stability_texticon 稳定度：§R-5.00%§! \n£drift_defence_texticon 意识形态变化防御：§R-5.00%§!\n\n"
- CES_liberals_modifier6_tt: "$CES_liberals_modifier_tt_intro$\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+10.00%§! \n£health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+10.00%§! \n£population_texticon 每月人口增长：§G+7.00%§!\n\n"
+ CES_liberals_modifier6_tt: "$CES_liberals_modifier_tt_intro$\n£social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+10.00%§! \n£health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+10.00%§! \n£population_texticon 每月人口增长：§G+7.00%§!\n\n"
  CES_liberals_modifier7_tt: "$CES_liberals_modifier_tt_intro$\n£stability_texticon 稳定度：§G+9.00%§!\n\n"
  CES_liberals_modifier8_tt: "$CES_liberals_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§! \n£education_budget_cost_factor_texticon 教育开支变更花费：§R+10.00%§! \n\n"
  CES_liberals_modifier9_tt: "$CES_liberals_modifier_tt_intro$\n£research_speed_texticon 研究速度：§G+10.00%§!\n\n"
@@ -606,7 +606,7 @@
  CES_kaz8_tt: "$CES_kaz_modifier_tt_intro$\n£corruption_cost_factor_texticon 腐败度变更花费：§R-25.00%§!\n\n"
  CES_kaz9_tt: "$CES_kaz_modifier_tt_intro$\n£political_power_texticon 政治点数获取：§G+2.00%§!\n£stability_texticon 稳定度：§G+5.00%§!\n\n"
  CES_kaz10_tt: "$CES_kaz_modifier_tt_intro$\n£defence_texticon 部队防御：§G+5.00%§!\n£organization_texticon 部队组织度：§G+5.00%§!\n£attack_texticon 部队攻击：§G+5.00%§!\n\n"
- CES_kaz11_tt: "$CES_kaz_modifier_tt_intro$\n£health_budget_cost_factor_texticon 健保开支变更花费：§G-20.00%§! \n£social_budget_cost_factor_texticon 社会开支变更花费：§G-20.00%§!\n\n"
+ CES_kaz11_tt: "$CES_kaz_modifier_tt_intro$\n£health_budget_cost_factor_texticon 医保开支变更花费：§G-20.00%§! \n£social_budget_cost_factor_texticon 社会开支变更花费：§G-20.00%§!\n\n"
  CES_kaz_reform_vs: "全盘改革"
  CES_kaz_reform_vs_desc: "我们的军队、我们的安全机构需要全盘改革，我们现在就开始。"
  CES_kaz_ter_oborna: "领土防御"
