--- a/localisation/simp_chinese/MD_focus_PMR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_PMR_l_simp_chinese.yml
@@ -119,7 +119,7 @@
  PMR_kommi6_tt: "$PMR_kommi_modifier_tt_intro$ \n £manpower_texticon 适役人口：§G+5.00%§!\n$PMR_kommi_modifier_tt_intro$ \n £political_power_texticon 政治点数获取：§G+2.00%§!  \n\n"
  PMR_kommi7_tt: "$PMR_kommi_modifier_tt_intro$ \n £stability_texticon  稳定度：§R-7.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§! \n £education_cost_multiplier_modifier_texticon §Y教育开支§!乘数：§R+5.00%§! \n\n"
  PMR_kommi8_tt: "$PMR_kommi_modifier_tt_intro$ \n £research_speed_texticon 研究速度：§G+10.00%§!  \n\n"
- PMR_kommi9_tt: "$PMR_kommi_modifier_tt_intro$ \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y健保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon 生产效率增长：§G+5.00%§! \n £construction_speed_texticon 当地建造速度：§G+5.00%§!\n\n"
+ PMR_kommi9_tt: "$PMR_kommi_modifier_tt_intro$ \n £social_cost_multiplier_modifier_texticon §Y社会支出开支§!乘数：§R+5.00%§! \n £health_cost_multiplier_modifier_texticon §Y医保开支§!乘数：§R+5.00%§! \n £efficiency_growth_texticon 生产效率增长：§G+5.00%§! \n £construction_speed_texticon 当地建造速度：§G+5.00%§!\n\n"
  PMR_kommi10_tt: "$PMR_kommi_modifier_tt_intro$ \n £efficiency_growth_texticon 生产效率增长：§G+10.00%§! \n £construction_speed_texticon 当地建造速度：§G+10.00%§!\n\n"
  PMR_kommi11_tt: "$PMR_kommi_modifier_tt_intro$ \n £resources_texticon 资源获取效率：§G+5.00%§! \n\n"
  PMR_kommi12_tt: "$PMR_kommi_modifier_tt_intro$ \n £consumer_goods_texticon 税收成本：§R-2.00%§! \n £emerging_outlook_campaign_cost_modifier_texticon 每日新兴主义新增支持率：§G+0.05%§! \n\n"
@@ -410,8 +410,8 @@
  PMR_putin_desc: "作为俄罗斯联邦的一员，我们将遵循总统选择的政治道路。"
  PMR_rosatom: "俄罗斯国家原子能公司"
  PMR_rosatom_desc: "俄罗斯国家核能公司是俄罗斯的国有核能公司，控制着俄罗斯的核工业复合体。"
- PMR_zdravo: "2011健保改革"
- PMR_zdravo_desc: "2011年健保改革由总理弗拉基米尔·普京提出，其目的为拨款超过三千亿卢布用于改善俄罗斯的健保系统。"
+ PMR_zdravo: "2011年医保改革"
+ PMR_zdravo_desc: "2011年医保改革由总理弗拉基米尔·普京提出，其目的为拨款超过三千亿卢布用于改善俄罗斯的健保系统。"
  PMR_union_state: "与白俄罗斯协调联盟计划"
  PMR_union_state_desc: "我们还将参与俄罗斯和白俄罗斯联盟国家的项目协调。"
  PMR_uchneia_s_br: "同盟决心-演习"
