--- a/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_TUR_l_simp_chinese.yml
@@ -1944,7 +1944,7 @@
  TurkeyFocusEvents.46.t: "伊斯兰福利联盟正在投资我们的教育事业！"
  TurkeyFocusEvents.46.d: "伊斯兰福利联盟投资了我们国家的教育部门，让人们更容易获得教育。"
  TurkeyFocusEvents.46.a: "太好了！"
- TurkeyFocusEvents.47.t: "伊斯兰福利联盟正在投资我们的健保事业！"
+ TurkeyFocusEvents.47.t: "伊斯兰福利联盟正在投资我们的医保事业！"
  TurkeyFocusEvents.47.d: "伊斯兰福利联盟现在正在投资我们国家的医疗保健系统，为更多的人提供医疗用品和设施。"
  TurkeyFocusEvents.47.a: "太好了！"
  TurkeyFocusEvents.48.t: "伊斯兰福利联盟正在投资我们的工业部门！"
