--- a/localisation/simp_chinese/MD_money_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_money_l_simp_chinese.yml
@@ -16,7 +16,7 @@
  F_TREASURY_TOOLTIP: "§Y[THIS.GetName]§!GDP总量：$§U[?gdp_total|0]§!B\n§Y[THIS.GetName]§!人均GDP：$§U[?gdp_per_capita]§!K\n---------\n他们有$[?treasury] §Hbillion§!现金余额\n他们每周收支是$[?treasury_rate|+] §HB§!"
  F_INT_INVESTMENTS_TOOLTIP: "他们目前有$[?int_investments]§HB§!用于国际投资。\n他们每周获得$[?int_investments_rate]§HB§!的§H投资收入§!并收归国库。"
  F_EXPENSE_GAIN_TOOLTIP: "他们目前每周开销为$[?display_expense]§HB§!。"
- F_EXPENSE_GAIN_TOOLTIP_DELAYED: "§C官僚§!：$§R[?bureaucracy_gain|-3]§!\n§O国防§!：$§R[?defence_gain|-3]§!\n§U治安§!：$§R[?security_gain|-3]§!\n§J教育§!：$§R[?education_gain|-3]§!\n§P健保§!：$§R[?health_gain|-3]§!\n§B福利§!：$§R[?welfare_gain|-3]§!\n§R债务利率：§! $§R[?debt_rate|-3]§!\n§H额外费用：§! $§R[?additional_expenses_rate|-3]§!\n\n总支出：$§R[?display_expense]§!"
+ F_EXPENSE_GAIN_TOOLTIP_DELAYED: "§C官僚§!：$§R[?bureaucracy_gain|-3]§!\n§O国防§!：$§R[?defence_gain|-3]§!\n§U治安§!：$§R[?security_gain|-3]§!\n§J教育§!：$§R[?education_gain|-3]§!\n§P医保§!：$§R[?health_gain|-3]§!\n§B福利§!：$§R[?welfare_gain|-3]§!\n§R债务利率：§! $§R[?debt_rate|-3]§!\n§H额外费用：§! $§R[?additional_expenses_rate|-3]§!\n\n总支出：$§R[?display_expense]§!"
  F_TAX_RATE_TOOLTIP: "他们目前§H税率§!为[?tax_rate]%\n\n§Y企业税率：§![?corporate_tax_rate]%\n§Y人口税率：§![?population_tax_rate]%\n"
  F_TAX_GAIN_TOOLTIP: "他们每周获得$[?display_income]§HB§!收入。"
  F_TAX_GAIN_TOOLTIP_DELAYED: "§Y[THIS.GetName]§!GDP：$§U[?THIS.gdp_total|0]§!B\n§Y[THIS.GetName]§!GDP/C： $§U[?THIS.gdp_per_capita]§!K\n---------\n§C人口收入：§! $§G[?population_tax|+3]§!\n§L企业税收：§! $§G[?corporate_tax|+3]§!\n§G国际投资：§! $§G[?int_investments_rate|+3]§!\n§U资源出口：§! §G[?resource_sale_rate|+3]§!\n§H额外收入：§! $§G[?additional_income_rate|+3]§!\n\n总计收入： $§G[?display_income]§!"
@@ -76,10 +76,10 @@
  EDUCATION_RATE: "$$§R[?education_gain|-3]§!"
  EDUCATION_EXPENSE_TOOLTIP: "教育支出"
  EDUCATION_EXPENSE_TOOLTIP_DELAYED: "教育支出是指我们用于资助公立和私立学校、研究和教育的资金。教育的基本成本基于国家总人口于各级§Y教育支出§!增加的成本。\n\n人均GDP对§Y教育支出§!的影响：[?education_cost_gdp_multiplier_display|-%0]\n法案，国家精神和科技对§Y教育支出§!的影响：[?education_cost_multiplier_display|-%0]\n科研槽数量对§Y教育支出§!的影响：[?research_slot_modifier|-%0]"
- HEALTHCARE_EXPENSE: "§P健保：§!"
+ HEALTHCARE_EXPENSE: "§P医保：§!"
  HEALTHCARE_RATE: "$$§R[?health_gain|-3]§!"
- HEALTHCARE_EXPENSE_TOOLTIP: "健保开支"
- HEALTHCARE_EXPENSE_TOOLTIP_DELAYED: "健保支出是指我们用多少钱来资助公共卫生系统，包括医疗、保险费用、药品补贴等等。医疗保健的基本费用是基于国家的总人口，§Y健保预算§!的每一级都会增加费用。\n\n人均GDP对§Y健保支出§!的影响：[?education_cost_gdp_multiplier_display|-%0]\n法案，国家精神和科技对§Y健保支出§!的影响：[?health_cost_multiplier_display|-%0]"
+ HEALTHCARE_EXPENSE_TOOLTIP: "医保开支"
+ HEALTHCARE_EXPENSE_TOOLTIP_DELAYED: "医保支出是指我们用多少钱来资助公共卫生系统，包括医疗、保险费用、药品补贴等等。医疗保健的基本费用是基于国家的总人口，§Y医保预算§!的每一级都会增加费用。\n\n人均GDP对§Y医保支出§!的影响：[?education_cost_gdp_multiplier_display|-%0]\n法案，国家精神和科技对§Y医保支出§!的影响：[?health_cost_multiplier_display|-%0]"
  WELFARE_EXPENSE: "§B福利：§!"
  WELFARE_RATE: "$$§R[?welfare_gain|-3]§!"
  WELFARE_EXPENSE_TOOLTIP: "福利支出"
@@ -381,7 +381,7 @@
  bankruptcy.103.d: "在分析了我们的财政状况后，国际货币基金组织得出结论，我们对公民教育的支持水平太高了。他们建议政府削减对高等教育和各种研究经费的支持。我们不应该支持我们的学生，而是应该增加他们对私人学生贷款的依赖。\n\n根据国际货币基金组织的说法，削减教育开支对于重组我们的债务是绝对必要的。"
  bankruptcy.103.a: "我们别无选择，只能接受"
  bankruptcy.103.b: "这太苛刻了"
- bankruptcy.104.t: "国际货币基金组织要求健保私有化"
+ bankruptcy.104.t: "国际货币基金组织要求医保私有化"
  bankruptcy.104.d: "在分析了我们的财政状况后，国际货币基金组织得出的结论是，与我们的经济状况相比，我们向公众提供的免费医疗服务水平过高。他们建议，至少一些医院应该私有化，私人医疗保险提供商的运营应该扩大。\n\n根据国际货币基金组织的说法，精简我们的医疗服务对于重组我们的债务是绝对必要的。"
  bankruptcy.104.a: "我们别无选择，只能接受"
  bankruptcy.104.b: "这太苛刻了"
