--- a/localisation/simp_chinese/ledger_l_simp_chinese.yml
+++ b/localisation/simp_chinese/ledger_l_simp_chinese.yml
@@ -44,6 +44,6 @@
  LEDGER_EXPENSE_TT: "§C官僚：§! $§R[?bureaucracy_gain|-3]§!\n§O国防：§! $§R[?defence_gain|-3]§!\n§U内部安全：§! $§R[?security_gain|-3]§!\n§J教育：§! $§R[?education_gain|-3]§!\n§P卫生：§! $§R[?health_gain|-3]§!\n§B福利：§! $§R[?welfare_gain|-3]§!\n§R债务利息：§! $§R[?debt_rate|-3]§!\n§H额外花费：§! $§R[?additional_expenses_rate|-3]§!\n\n总计支出： $§R[?display_expense]§!"
  LEDGER_FACTION_LEADER: "领导"
  LEDGER_FACTION_MEMBERS: "成员"
- LEDGER_DEBT_TT: "[THIS.GetNameWithFlag]的债务总额为$[?THIS.debt|-]B。他们目前每周支付[?debt_rate|-]美元的利息，利率为 [?interest_rate]%。"
- LEDGER_TREASURY_TT: "[THIS.GetNameWithFlag]国库余额为$$[?THIS.tresury|+]B。扣除开支后，他们目前每周赚取 $[?THIS.treasury_rate|+]B美元。他们还有价值$[?THIS.int_investments|+]B的§Y国际投资§!，这可让他们每周赚取$[?int_investments_rate|+]b的利润。"
+ LEDGER_DEBT_TT: "[THIS.GetNameWithFlag]的债务总额为$[?THIS.debt|-]B。他们目前每周支付$[?debt_rate|-]的利息，利率为[?interest_rate]%。"
+ LEDGER_TREASURY_TT: "[THIS.GetNameWithFlag]国库余额为$$[?THIS.tresury|+]B。扣除开支后，他们目前每周赚取$[?THIS.treasury_rate|+]B美元。他们还有价值$[?THIS.int_investments|+]B的§Y国际投资§!，这可让他们每周赚取$[?int_investments_rate|+]B的利润。\n"
  LEDGER_OPEN_DESC: "打开报表界面，显示全球所有国家的国家信息，包括经济信息、军事信息和政治信息。"
